[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "marimo",
    "pyarrow>=22.0.0",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "quantlib>=1.40",
    "lets-plot>=4.8.0",
    "numba>=0.62.1",
    "py-lets-be-rational",
    "py-vollib",
    "polars>=1.35.2",
    "torch>=2.9.1",
    "scikit-learn>=1.7.2",
    "optuna>=4.6.0",
    "plotly>=6.5.0",
    "joblib>=1.5.2",
]

[tool.uv.sources]
py-lets-be-rational = { git = "https://github.com/vollib/py_lets_be_rational.git" }
py-vollib = { git = "https://github.com/vollib/py_vollib.git" }

[tool.pyright]
typeCheckingMode = "off"
